--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           <img src="img/bombon-digital.png"
                class="mascot animate__animated animate__bounceInDown"
                style="animation-delay:300ms" alt="Bombón Digital">
-          <img src="img/card-digital.svg" alt="Digital Business Card" class="product-img">
+          <img src="img/card-nfc.png" alt="Digital Business Card" class="product-img">
           <h5 class="fw-bold mt-3 text-coffee-900">Digital Business Card</h5>
           <p class="text-coffee-700">All your links, socials, shop, and forms with a single tap.</p>
           <a href="#" class="btn btn-cta w-100">Go digital today</a>
